@@ -1,5 +1,6 @@
 Revision history for File::DataClass
 
+          - Added strict warnings to main module. Kwalitee
           - Better Octalum implementation
 
 0.59.1    2015-04-05 18:56:50
